sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2: error: not found: value cocktailSort2
		cocktailSort2();
                ^AlgCocktailSort2:18: error: not found: value n
      var i : Int = n - 2 - k
                    ^