sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort() {
	var fin : Int = getNombreValeurs() - 2
  var aBouger : Boolean = true
  var debut : Int = 0
    
  while (aBouger == true){
    aBouger = false
    
    for (k <- debut to fin){
      if (plusPetit(k, k+1) == false){
        echange(k,k+1)
        aBouger = true
      }
    fin -= 1
    }
    for (k <- debut to fin){
      var i : Int = n - 2 - k
      if (plusPetit(i, i+1) == false){
        echange(i,i+1)
        aBouger = true
      }
    debut += 1
    }
  }
}